<?xml version="1.0" encoding="utf-8"?>


<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <Button
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/welcome__message"/>
    
    <Button
        android:id="@+id/ctulhu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/welcome__ctulhu"/>
    
    <Button
        android:id="@+id/timemachine"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/welcome__timemachine"/>
    
</LinearLayout>
